--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
             href: TidyTuesday1.qmd
           - text: "World Heritage Sites"
             href: TidyTuesday2.qmd
+          - text: "Project 2"
+            href: Project 2.qmd
 
 format:
   html:
