added sketch duolingo

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,7 +34,7 @@ website:
             href: Sparkathon24.qmd
           - text: "Alumni Connectivity Wireframe"
             href: paiproject.qmd
-          - text: "Pitch Competition Product Design"
+          - text: "Duolingo Product Design"
             href: pitchcompetition.qmd
       - text: Research
         href: aestheticsresearch.qmd
